tests/cases/generics/errors/generic-return-substitution-mismatch.ari
fn bad_return[T](value: T) -> T {
  return 1;
}

fn main() -> i64 {
  if bad_return<bool>(false) {
    return 1;
  }
  return 0;
}
